# sp500-momentum-screener

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
sp500_momentum/: __init__.py  backtester.py  constituents.py  data_fetcher.py  factor_attribution.py  monte_carlo.py  oos_validation.py  sensitivity_analysis.py  strategy.py  visualization.py
tests/: test_backtest_basics.py
