[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-momentum-screener"
version = "1.5.0"
description = "S&P 500 momentum screening and backtesting CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Johan" }]
dependencies = [
  "yfinance>=0.2.36",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "pyarrow>=14.0.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "lxml>=5.0.0",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
sp500-momentum = "main:main"
sp500-momentum-screener = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["sp500_momentum*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
